#4465 closed bug (fixed)
regression: no working DHCP in Vmware
Reported by: | luroh | Owned by: | zooey |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Network & Internet/Stack | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #4269 | |
Platform: | All |
Description
Revision 33025, gcc2, trunk, Vmware Player 2.5.3 (32-bit).
(Lots of DHCP issues in Trac but none I could find that really fit)
DHCP hasn't worked for a while in Vmware, which means new users won't have any network access without fiddling with static settings.
Revision 29603 works, I'll start working on narrowing down the regression range tomorrow.
Change History (10)
comment:1 by , 11 years ago
Component: | - General → Network & Internet/Stack |
---|
comment:2 by , 11 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:3 by , 11 years ago
zooey: correct, when testing revision 33025 yesterday, I had no OptionalPackages installed.
comment:4 by , 11 years ago
zooey: I confirm; today's rev 33035 without any OptionalPackages does not have working DHCP. Same rev with OpenSSH installed and DHCP works fine in NAT'ed mode! How the heck did you discover that? :-)
Note that bridged mode does not work here. Bridged mode is currently the default in our vmx file here: http://svn.berlios.de/svnroot/repos/haiku/haiku/trunk/3rdparty/vmware/haiku.vmx, we might want to change that.
follow-up: 7 comment:5 by , 11 years ago
Well, technically "bridged" mode should basically mean that Haiku will obtain DHCP-assigned address from a DHCP server other than the built-in vmware one - so this likely means DHCP is still failing with some servers.
But if NAT mode always works, perhaps you're right and that would be the better default.
comment:7 by , 11 years ago
Replying to umccullough:
Well, technically "bridged" mode should basically mean that Haiku will obtain DHCP-assigned address from a DHCP server other than the built-in vmware one - so this likely means DHCP is still failing with some servers.
When using a static address I don't manage to ping the gateway anyway in bridged mode. Thus it's not really a DHCP issue.
comment:8 by , 11 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Fixed in hrev33050 - bridged mode seems to work now, too (at least it does for me).
comment:9 by , 11 years ago
Confirmed fixed, thanks zooey! Still no working bridged mode here though.
comment:10 by , 11 years ago
Blocking: | 4269 added |
---|
(In #4269) I'm closing it as a duplicate then. Please re-open if it is a different problem and still happens.
Hey, this is interesting!
I thought I observed the same yesterday but had been unable to reproduce today, *until* I removed all optional packages.
It turns out that DHCP ceases to work if OpenSSH is missing. I'm currently investigating, why this is the case (probably due to the net_server trying to start sshd).
Luroh, could you please validate my assumption and check whether or not you have OpenSSH installed?